--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
 		"preview": "vite preview"
 	},
 	"dependencies": {
+		"ahooks": "^3.8.1",
 		"classnames": "^2.5.1",
 		"dayjs": "^1.11.13",
 		"react": "^18.3.1",
